--- a/app/src/main/res/layout/activity_food_search.xml
+++ b/app/src/main/res/layout/activity_food_search.xml
@@ -17,7 +17,7 @@
     <ListView
         android:id="@+id/foodList"
         android:layout_width="match_parent"
-        android:layout_height="460sp"
+        android:layout_height="400sp"
         android:layout_marginVertical="10dp"></ListView>
 
     <Button
@@ -54,9 +54,9 @@
             android:layout_height="50sp"
             android:layout_gravity="top"
             android:layout_marginEnd="10sp"
-            android:background="@drawable/my_button_border"
+            android:background="@color/colorPrimary"
             android:text="@string/menu_foods"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@android:color/white"
             android:textStyle="bold" />
 
         <Button
@@ -76,10 +76,8 @@
             android:layout_height="50sp"
             android:layout_gravity="top"
             android:layout_marginEnd="10sp"
-            android:background="@color/colorPrimary"
-            android:src="@drawable/foodsearchicon"
-            android:textColor="@android:color/white"
-            android:textStyle="bold" />
+            android:background="@drawable/my_button_border"
+            android:src="@drawable/foodsearchicon_primarycolor"/>
     </LinearLayout>
 
 </LinearLayout>
